@@ -3,6 +3,7 @@ applauncherd (0.30.1) unstable; urgency=low
   * Changes: New functional tests added to check testability library is loaded by booster-m and booster-d
   * Changes: Deprecate MDeclarativeCache::applicationDirPath() and MDeclarativeCache::applicationFilePath().
   * Changes: Modify test applications to use _exit().
+  * Fixes: NB#263422 - Precached (QML) applications do not set WM_NAME window atom properly
 
  -- Pertti Kellomaki <pertti.kellomaki@nokia.com>  Wed, 8 Jun 2011 13:36:37 +0300
 
